k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-zap
  labels:
    app: poc-zap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-zap
  template:
    metadata:
      labels:
        app: poc-zap
    spec:
      containers:
        - name: poc-zap
          image: stefangolubov/poc-zap:latest
          ports:
            - containerPort: 9999
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9999
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9999
            initialDelaySeconds: 5
            periodSeconds: 5
