k8s/zap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zap
spec:
  selector:
    app: zap
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: api
      port: 8090
      targetPort: 8090
