k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-zap-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: zap.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zap-service
                port:
                  number: 8080
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poc-zap-service
                port:
                  number: 80
